<resources>
    <string name="app_name">MyLifts</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="Navigation_Drawer_Settings">Settings</string>
    <string name="Navigation_Drawer_Calendar">Calendar</string>
    <string name="Navigation_Drawer_Home">Workouts</string>
    <string name="Navigation_Drawer_Measurements">Measurements</string>
    <string name="Navigation_Drawer_Journal">Journal</string>
    <string name="Navigation_Drawer_Analysis">Analysis</string>



    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>

    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>

    <string name="settings_string">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="add_workout_string">+</string>
    <string name="undo_string">-</string>
    <string name="undo_tapped_string">X</string>


    <string name="add_workout_message">Name Your Workout</string>
    <string name="add_workout_message_done">Done</string>

    <string name="add_exercise_message">Name Your Exercise</string>
    <string name="add_exercise_message_done">Done</string>

    <string name="add_measurement_message_done">Done</string>
    <string name="add_measurement_message">Name Measurement Item</string>

    <string name="WorkoutFragmentString">Workouts</string>

    <string name="add_exerciseInstance_done">Log Instance</string>
    <string name="add_exerciseInstance_undo">Undo</string>
    <string name="title_activity_measurements">MeasurementsActivity</string>
    <string name="title_activity_journal">JournalActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="title_activity_analysis">AnalysisActivity</string>


    <string name="hello_world">Hello world!</string>
    <string name="add_measurement_editable">Your Measurement</string>

    <string name="add_goal_message">Your goal measurement</string>
    <string name="add_goal_date_message">In how many days?</string>
    <string name="AddGoalJournlMsg">  Enter journal entry here. It will show in your daily journal entry.</string>

    <string name="GoalViewKey">com.example.franktastic4.mylifts.GOAL_VIEW_KEY</string>
    <string name="GoalIsActive">com.example.franktastic4.mylifts.GOAL_IS_ACTIVE_KEY</string>

    <string name="TimeVarSet">com.example.franktastic4.mylifts.TIME_VAR_SET</string>
    <string name="TimeVar1">com.example.franktastic4.mylifts.TIME_VAR_1</string>
    <string name="TimeVar2">com.example.franktastic4.mylifts.TIME_VAR_2</string>
    <string name="TimeVar3">com.example.franktastic4.mylifts.TIME_VAR_3</string>
    <string name="TimeVar4">com.example.franktastic4.mylifts.TIME_VAR_4</string>

    <string name="HideEmptyJournalEntry">com.example.franktastic4.mylifts.HideEmptyJournalEntryKey</string>


</resources>
